--- a/.gitignore
+++ b/.gitignore
@@ -28,16 +28,25 @@
 # Ignore fix module files and directories.
 /modules/*
 !/modules/blog
+!/modules/blog/*
 /themes/*
 !/themes/admin_default/css/blog.css
 !/themes/admin_default/images/blog
+!/themes/admin_default/images/blog/*
 !/themes/admin_default/modules/blog
+!/themes/admin_default/modules/blog/*
 !/themes/blog/css/blog.css
 !/themes/blog/images/blog
+!/themes/blog/images/blog/*
 !/themes/blog/modules/blog
+!/themes/blog/modules/blog/*
 !/themes/default/css/blog.css
 !/themes/default/images/blog
+!/themes/default/images/blog/*
 !/themes/default/modules/blog
+!/themes/default/modules/blog/*
 !/themes/mobile_nukeviet/css/blog.css
 !/themes/mobile_nukeviet/images/blog
+!/themes/mobile_nukeviet/images/blog/*
 !/themes/mobile_nukeviet/modules/blog
+!/themes/mobile_nukeviet/modules/blog/*
