--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,4 @@
 !/themes/mobile_nukeviet/images/blog/*
 !/themes/mobile_nukeviet/modules/blog
 !/themes/mobile_nukeviet/modules/blog/*
+!/includes/cronjobs/module_blog_newsletters.php
