Move js to theme

--- a/.gitignore
+++ b/.gitignore
@@ -1,54 +1,56 @@
 # Ignore some static files and directories.
+/.gitattributes
 /.htaccess
-/apple-touch-icon.png
-/CJzip.php
 /config.php
 /favicon.ico
 /index.php
 /LICENSE.txt
-/mainfile.php
+/CHANGELOG.txt
+/COPYRIGHT.txt
+/CONTRIBUTING.md
 /robots.php
 /robots.txt
 /web.config
 /admin/
-/cache/
+/assets/
 /data/
-/editors/
-/files/
-/images/
 /includes/
 /install/
-/js/
-/language/
-/logs/
-/sess/
-/tmp/
 /uploads/
+/vendor
+/composer.json
+/modules/*
+/themes/*
 
 # Ignore fix module files and directories.
-/modules/*
 !/modules/blog
-!/modules/blog/*
-/themes/*
-!/themes/admin_default/css/blog.css
-!/themes/admin_default/images/blog
-!/themes/admin_default/images/blog/*
-!/themes/admin_default/modules/blog
-!/themes/admin_default/modules/blog/*
-!/themes/blog/css/blog.css
-!/themes/blog/images/blog
-!/themes/blog/images/blog/*
-!/themes/blog/modules/blog
-!/themes/blog/modules/blog/*
+
+!/themes/default
+/themes/default/*
+!/themes/default/css
+!/themes/default/js
+!/themes/default/images
+!/themes/default/modules
+/themes/default/css/*
+/themes/default/js/*
+/themes/default/images/*
+/themes/default/modules/*
 !/themes/default/css/blog.css
+!/themes/default/js/blog.js
 !/themes/default/images/blog
-!/themes/default/images/blog/*
 !/themes/default/modules/blog
-!/themes/default/modules/blog/*
-!/themes/mobile_nukeviet/css/blog.css
-!/themes/mobile_nukeviet/images/blog
-!/themes/mobile_nukeviet/images/blog/*
-!/themes/mobile_nukeviet/modules/blog
-!/themes/mobile_nukeviet/modules/blog/*
-!/includes/cronjobs/module_blog_newsletters.php
-/*.txt
+
+!/themes/admin_default
+/themes/admin_default/*
+!/themes/admin_default/css
+!/themes/admin_default/js
+!/themes/admin_default/images
+!/themes/admin_default/modules
+/themes/admin_default/css/*
+/themes/admin_default/js/*
+/themes/admin_default/images/*
+/themes/admin_default/modules/*
+!/themes/admin_default/css/blog.css
+!/themes/admin_default/js/blog.js
+!/themes/admin_default/images/blog
+!/themes/admin_default/modules/blog
