Chuyển phiên bản xuống 4.6

--- a/.gitignore
+++ b/.gitignore
@@ -12,50 +12,74 @@
 /robots.php
 /robots.txt
 /web.config
-/admin/
-/assets/
-/data/
-/includes/
-/install/
-/uploads/
-/vendor
-/composer.json
-/modules/*
-/themes/*
+/src/admin/
+/src/assets/
+/src/data/
+/src/includes/
+/src/install/
+/src/uploads/
+/src/vendor
+/src/composer.json
+/src/modules/*
+/src/themes/*
 
 # Ignore fix module files and directories.
-!/modules/blog
+!/src/modules/blog
 
-!/themes/default
-/themes/default/*
-!/themes/default/css
-!/themes/default/js
-!/themes/default/images
-!/themes/default/modules
-/themes/default/css/*
-/themes/default/js/*
-/themes/default/images/*
-/themes/default/modules/*
-!/themes/default/css/blog.css
-!/themes/default/js/blog.js
-!/themes/default/images/blog
-!/themes/default/modules/blog
+!/src/themes/default
+/src/themes/default/*
+/src!/themes/default/css
+/src!/themes/default/js
+/src!/themes/default/images
+/src!/themes/default/modules
+/src/themes/default/css/*
+/src/themes/default/js/*
+/src/themes/default/images/*
+/src/themes/default/modules/*
+/src!/themes/default/css/blog.css
+/src!/themes/default/js/blog.js
+/src!/themes/default/images/blog
+/src!/themes/default/modules/blog
 
-!/themes/admin_default
-/themes/admin_default/*
-!/themes/admin_default/css
-!/themes/admin_default/js
-!/themes/admin_default/images
-!/themes/admin_default/modules
-/themes/admin_default/css/*
-/themes/admin_default/js/*
-/themes/admin_default/images/*
-/themes/admin_default/modules/*
-!/themes/admin_default/css/blog.css
-!/themes/admin_default/js/blog.js
-!/themes/admin_default/images/blog
-!/themes/admin_default/modules/blog
+!/src/themes/admin_default
+/src/themes/admin_default/*
+/src!/themes/admin_default/css
+/src!/themes/admin_default/js
+/src!/themes/admin_default/images
+/src!/themes/admin_default/modules
+/src/themes/admin_default/css/*
+/src/themes/admin_default/js/*
+/src/themes/admin_default/images/*
+/src/themes/admin_default/modules/*
+/src!/themes/admin_default/css/blog.css
+/src!/themes/admin_default/js/blog.js
+/src!/themes/admin_default/images/blog
+/src!/themes/admin_default/modules/blog
+
+/scss
+
 /error.php
 /.buildpath
 /.project
 /.settings
+/.env
+/.env.example
+/TODO.txt
+/codeception.dist.yml
+/build/postcss.config.mjs
+/scripts
+/composer.json
+/package.json
+/src/.htaccess
+/src/api.php
+/src/config.php
+/src/error.php
+/src/favicon.ico
+/src/index.php
+/src/mload.php
+/src/robots.php
+/src/robots.txt
+/src/sload.php
+/src/web.config
+/tests
+/tools
